Use 'ld' instead of 'gcc' for the final linking. On some distributions, such as Ubuntu, the 'gcc' seems to be broken and does not link to libraries that are in unusual, but system default locations.
Also add '/usr/lib/x86_64-linux-gnu' among the locations to look for PAPI libraries.

--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
 			<or>
 				<available file="libpapi.so" filepath="/usr/lib" />
 				<available file="libpapi.so" filepath="/usr/lib64" />
+				<available file="libpapi.so" filepath="/usr/lib/x86_64-linux-gnu" />
 			</or>
 		</and>
 	</condition>
@@ -337,7 +338,7 @@
 			<mapper type="glob" from="*.c" to="*.o" />
 		</apply>
 		<apply
-				executable="gcc"
+				executable="ld"
 				failonerror="true"
 				parallel="true"
 				verbose="true">
