--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: java
+env:
+  matrix:
+   - WITH_PAPI=true
+   - WITH_PAPI=false
 before_install:
  - sudo apt-get install ant-optional
+ - "$WITH_PAPI && sudo apt-get install libpapi-dev"
 script:
  - ant print-config
  - ant print-properties
