Travis: try Docker-based images

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,31 @@
+sudo: false
+dist: trusty
 language: java
-env:
-  matrix:
-   - WITH_PAPI=true
-   - WITH_PAPI=false
-before_install:
- - sudo apt-get install ant-optional
- - if $WITH_PAPI; then sudo apt-get install libpapi-dev; fi
-script:
- - "echo 'agent.cc.warnings = aserror' >local-settings.ini"
- - ant print-config
- - ant print-properties
- - ant list-events
- - gcc --version
- - ant test-junit
- - ant checkstyle
+
+matrix:
+  include:
+    - env:
+        - WITH_PAPI=true
+      addons:
+        apt:
+          packages:
+            - libpapi-dev
+    - env:
+        - WITHOUT_PAPI=true
+
 os:
- - linux
+  - linux
+
+addons:
+  apt:
+    packages:
+      - ant-optional
+
+script:
+  - "echo 'agent.cc.warnings = aserror' >local-settings.ini"
+  - ant print-config
+  - ant print-properties
+  - ant list-events
+  - gcc --version
+  - ant test-junit
+  - ant checkstyle
