--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,20 @@ language: java
 
 matrix:
   include:
-    - env:
-        - WITH_PAPI=true
+    - jdk: oraclejdk8
       addons:
         apt:
           packages:
             - libpapi-dev
-    - env:
-        - WITHOUT_PAPI=true
+    - jdk: oraclejdk8
+    - jdk: oraclejdk9
+    - jdk: openjdk8
+    - jdk: openjdk7
+    - jdk: openjdk6
+      addons:
+        apt:
+          packages:
+            - openjdk-6-jdk
 
 os:
   - linux
