--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,7 @@
 	<property name="agent.build.dir" location="${build.dir}/agent/" />
 	<property name="barrier.build.dir" location="${build.dir}/barrier/" />
 	<property name="lib.build.dir" location="${build.dir}/lib/" />
+	<property name="javadoc.build.dir" location="${build.dir}/javadoc/" />
 	
 	<property name="junit.jar.path" value="lib/junit-4.11.jar" />
 	<property name="hamcrest.jar.path" value="lib/hamcrest-core.jar" />
@@ -737,6 +738,40 @@
 			<zipfileset file="LICENSE.txt" prefix="${dist.name}/" />
 			<zipfileset file="README.md" prefix="${dist.name}/" />
 		</zip>
+	</target>
+	
+	<target name="javadoc">
+		<mkdir dir="${javadoc.build.dir}" />
+		<javadoc
+				destdir="${javadoc.build.dir}"
+				author="true"
+				version="true"
+				use="true"
+				overview="${java.src.dir}/overview.html"
+				windowtitle="${ant.project.name}">
+			<packageset
+				dir="${java.src.dir}"
+				defaultexcludes="yes" />
+			<arg value="-Xdoclint:none" />
+		</javadoc>
+	</target>
+
+	<target name="javadoc-make-overview">
+		<echo
+			append="false"
+			file="${java.src.dir}/overview.html"
+			message="&lt;html&gt;&lt;head&gt;&lt;title&gt;${ant.project.name}&lt;/title&gt;&lt;/head&gt;&lt;body&gt;${line.separator}" />
+		<exec
+				executable="pandoc"
+				output="${java.src.dir}/overview.html"
+				input="README.md"
+				append="true">
+			<arg value="--no-highlight" />
+		</exec>
+		<echo
+			append="true"
+			file="${java.src.dir}/overview.html"
+			message="${line.separator}&lt;/body&gt;&lt;/html&gt;${line.separator}" />
 	</target>
 
 	<target name="checkstyle">
