--- a/build.xml
+++ b/build.xml
@@ -332,6 +332,7 @@
 		>
 		<echo message="                 OS: ${os.name} ${os.version} (${os.arch})" />
 		<echo message="  Used Java version: ${ant.java.version}" />
+		<echo message="        JRE version: ${java.version}" />
 		<echo message="        Ant version: ${ant.version.bare}" />
 		<echo message="    JNI headers via: javah task" if:set="agent.generate.headers.javah" />
 		<echo message="    JNI headers via: javac task" if:set="agent.generate.headers.javac" />
