--- a/build.xml
+++ b/build.xml
@@ -103,17 +103,17 @@
 	
 	<!-- javah is deprecated since JDK 8 ... -->
 	<condition property="agent.generate.headers.javah">
-		<matches pattern="^1[.][678]" string="${ant.java.version}" />
+		<matches pattern="^1[.][678]" string="${java.version}" />
 	</condition>
 	<condition property="agent.generate.headers.javac">
 		<and>
 			<antversion atleast="1.10.2" />
-			<matches pattern="^(1[.]9)|9|(1[0-9])" string="${ant.java.version}" />
+			<matches pattern="^(1[.]9)|9|(1[0-9])" string="${java.version}" />
 		</and>
 	</condition>
 	<condition property="agent.generate.headers.javac.manually">
 		<and>
-			<matches pattern="^(1[.]9)|9|(1[0-9])" string="${ant.java.version}" />
+			<matches pattern="^(1[.]9)|9|(1[0-9])" string="${java.version}" />
 			<not>
 				<antversion atleast="1.10.2" />
 			</not>
