Simplify dual-loading support
Indicating that the agent has been already loaded by setting a field
in the 'UbenchAgent' class can fail in an environment with multiple
class loaders, because we may fail to find the 'UbenchAgent' class.

Instead, we just check if we can call the agent's native functions and
if not, we try to load it explicitly using the 'loadLibrary()' method.

--- a/build.xml
+++ b/build.xml
@@ -477,6 +477,7 @@
 		<compile-header classname="OverheadEstimations" />
 		<compile-header classname="Measurement" />
 		<compile-header classname="NativeThreads" />
+		<compile-header classname="UbenchAgent" />
 	</target>
 
 	<target name="compile-agent-maybe-gcc" if="agent.cc.is.gcc">
