--- a/build.xml
+++ b/build.xml
@@ -356,6 +356,21 @@
 		>
 	</target>
 
+	<target name="gate" description="Gate: check everything.">
+		<antcall target="clean" />
+		<antcall target="print-properties" />
+		<antcall target="print-config" />
+		<antcall target="compile" />
+		<antcall target="lib" />
+		<antcall target="javadoc" />
+		<antcall target="checkstyle" />
+		<antcall target="test-junit" />
+		<antcall target="test" />
+		<antcall target="dist" />
+		<antcall target="list-events" />
+		<antcall target="demo" />
+	</target>
+	
 	<target name="compile"
 			depends="compile-java,compile-agent,compile-barrier"
 			description="Compile everything."
